--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -2613,62 +2613,68 @@ versus another may be highly informative about inferring local ancestry,
 or for inferring phylogenetic networks...}
 
 
-
 \subsection{Whole genome phylogenomics and concatalescence}
 % MSC model requires gene tree frequencies, but what is a gene tree?
 The multispecies coalescent is a model to describe the expected distribution 
-of unlinked genealogies given a parameterized species tree, and is the basis
-for modern phylogenetic inference of multi-locus datasets. However, because 
-linkage among genealogies can cause their distribution to deviate from the 
-expectations of an MSC model, multi-locus datasets are often highly filtered to
+of unlinked genealogies given a parameterized MSC model, and is the basis
+for modern phylogenetic inference aimed at inferring a species tree as a 
+hierarchical model of relationships among populations or species. 
+However, because genetic linkage among genealogies sampled from different regions
+of a genome can cause their distribution to deviate from the expectations of the
+MSC, multi-locus datasets used for species tree inference are often highly filtered to 
 avoid this type of model violation. For example, even as whole genome sequence data 
-has become increasingly available, a common practice has developed in which
-a small number of discrete unlinked loci is extracted from whole genome 
+has become increasingly available, a common practice for has been to 
+subsample a small number of discrete unlinked loci from whole genome 
 alignments for species tree inference (e.g., Jarvis paper and that recent Moth paper), 
 effectively discarding the vast majority of sequenced data. 
 % Although in many cases this may be sufficient for species tree inference, ...
 
-
 Even after subsampling unlinked loci, species tree inference can still
 face potential problems from genetic linkage if the genealogical data within 
-individual loci is variable.
-In theory, a locus should correspond to a single genealogical tree or topology
-across its entire length, depending on whether the MSC inference method 
-uses branch length information or not. To the extent a locus corresponds to
-sequences evolved on multiple distinct genealogies, a gene tree inferred from
-that locus will be influenced by concatenation, which can bias the distribution
-of gene trees to deviate from the expectations of an MSC model. This bias is
-termed concatalescence \citep{liu2010maximum,gatesy_concatenation_2013,zhang2018astral}. 
-... The waiting distance between topology-change events could provide a 
-guide as to the appropriate size of markers to use for unlinked locus analyses.
+individual loci is variable. 
+In theory, a locus should correspond to sequences evolved on only a single 
+genealogical tree or topology across its entire length, depending on whether 
+the inference method uses branch length information \citep[e.g.,][]{liu2010maximum}
+or not \citep[e.g.,][]{zhang2018astral}. 
+If a locus corresponds to multiple genealogies then its inferred gene tree 
+will be influenced by concatenation, which can bias the distribution
+of gene trees, and even summary statistics like quartet frequencies, 
+to deviate from the expectations of the MSC -- a process termed concatalescence 
+\citep{gatesy_concatenation_2013}. One practical 
+application of the MS-SMC' is in serving as a guide for selecting 
+appropriate locus lengths, where the average waiting distance between
+genealogical trees or topologies can be estimated given a proposed 
+species tree model, recombination rate, and number of samples per species.
+
+One could envision a future spatially-explicit phylogenetic inference
+framework in which linked genome data can be used directly for species
+tree inference. This would mark a major transition in phylogenetics, where
+recombination would shift from being viewed as a source of error to becoming
+a source of information. We see the MS-SMC' as a small step in this 
+direction. As an example, we showed that species tree parameters can be 
+estimated from the information in genealogical waiting distances alone. 
+However, many challenges would need to be overcome before this approach 
+could become practical, not least of which is the fact that genealogies
+cannot be observed directly, and so any approach would likely require either 
+inferring ARGs or integrating over distributions of possible ARGs. 
+Another possible direction may involve bypassing local gene tree inference 
+altogether, as in the approach taken by SNAPP \citep{bryant2012inferring}, 
+which can compute the likelihood of a species tree from unlinked SNP 
+patterns by effectively integrating over all possible gene trees that 
+could produce each SNP. A spatially explicit version might instead
+aim to calculate the likelihood that any two SNP patterns, and thus
+their underlying topologies, would exist given the spatial distance
+that separates them. 
+% To extend these SNP-based methods and/or to improve gene-tree-based methods to better delimit gene tree breakpoints, 
+% we propose that incorporating the rates of turnover observed in the data as 
+% information could actually offer useful new information for inferring the species tree 
+% model that generated it. 
 
 
-% \subsection{Future directions in spatial phylogenetics}
-We see the MS-SMC' as a step towards a spatially-explicit 
-species tree inference framework. One in which recombination events
-are viewed as a source of information as opposed to a source of
-error. Many challenges await. Not least being the fact that we cannot
-observe genealogies, and so the approach described here must be 
-extended to observed SNP patterns in genomes. In this way, we see 
-
-the approach of SNP-based methods like SNAPP as a likely precursor to 
-future methods. One where rather than samplign unlnked SNPs, we could 
-use any observed SNP patterns, and the genomic distances between them, 
-to model not only the distributions of genealogies that could produce
-each SNP, but also the probability that genealogies underlying those
-SNP patterns would exist at that spatial distance apart. ...
-
-Some methods bypass genealogy inference by operating directly on SNP 
-frequencies \citep{bryant2012inferring,chifman2014quartet,vachaspati2018svdquest}, 
-and therefore might largely avoid bias from ignoring recombination. 
-To extend these SNP-based methods and/or to improve gene-tree-based methods to better delimit gene tree breakpoints, 
-we propose that incorporating the rates of turnover observed in the data as 
-information could actually offer useful new information for inferring the species tree 
-model that generated it. 
-
-
-\subsection{better-title-Sliding windows and local ancestry inference}
-1. Local ancestry inference 
+\subsection{Local ancestry inference}
+X. 
+1. In most cases, unlinked genomic data may be sufficient to accurately infer 
+an MSC model.
 2. Hypotheses to test
 3. But lack of null model. We now can have a hypothesis testing framework.
 1. Similarly, ARG slash local ancestry inference methods employ model-based
@@ -2688,6 +2694,7 @@ genealogies.
 %topologies along a genome under a species tree model? We generalized a 
 %recent solution that used a single population and constant Ne \citep{deng_distribution_2021}, instead 
 
+\subsubsection{older}
 
 We solved for the expected turnover rate in genealogical trees and topologies 
 along a genome under an arbitrary species tree topology with arbitrary 
